--- a/assignment3.ipynb
+++ b/assignment3.ipynb
@@ -16,8 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 Random Graph\n",
-    "### n=10,p=0.001"
+    "## 1 Random Graph"
    ]
   },
   {
@@ -70,13 +69,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### n=10,p=0.05"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -121,13 +113,6 @@
     "plt.xlabel('Degree')\n",
     "plt.ylabel('Frequency')\n",
     "plt.grid(True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### n=100,p=0.001"
    ]
   },
   {
@@ -178,13 +163,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### n=100,p=0.05"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -232,13 +210,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### n=200,p=0.001"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -283,13 +254,6 @@
     "plt.xlabel('Degree')\n",
     "plt.ylabel('Frequency')\n",
     "plt.grid(True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### n=200,p=0.05"
    ]
   },
   {
